--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs/PickFood/v15
+/Debug/PickFood.exe.metagen
+/Debug/PickFood.pdb
